--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootswatch": "^4.6.0",
     "next": "^10.0.7",
     "nextjs": "^0.0.3",
+    "nprogress": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
